compilateurDeca/src/test/deca/codegen/valid/avec_objet/axe1/object_equals.deca
// Description:
//    Redéfinition de la méthode equals d'Object
//
// Resultats:
//    Vrai
// 
// Historique:
//    cree le 14/01/2026

class A {
    boolean equals(Object other) {
        println("Vrai");
        return true;
    }
}

{
    Object obj = new A();
    A a = new A();
    obj.equals(a); 
}
